# dadb

./: .gitignore  README.md  build.gradle.kts  settings.gradle.kts
dadb/: build.gradle.kts
dadb-android/: build.gradle.kts  gradle.properties
dadb-android/src/main/cpp/: CMakeLists.txt
dadb-android/src/main/cpp/pairing/: adb_pairing.cpp  logging.h
dadb-android/src/main/kotlin/dadb/android/: RsaPublicKeyDeriver.kt
dadb-android/src/test/kotlin/dadb/android/: RsaPublicKeyDeriverTest.kt
dadb-helper/: build.gradle.kts
dadb-helper/src/main/java/dadb/helper/: AppIconExportMain.java  HelperVersionMain.java  ManagementSnapshotMain.java  ScreenshotStreamMain.java  TcpRelayMain.java  TouchStreamMain.java
dadb/src/main/kotlin/dadb/: AdbConnection.kt  AdbException.kt  AdbKeyPair.kt  AdbMessage.kt  AdbReader.kt  AdbReverse.kt  AdbShell.kt  AdbStream.kt  AdbSync.kt  AdbSyncModels.kt  AdbTransport.kt  AdbWriter.kt  Constants.kt  Dadb.kt  DadbImpl.kt  DadbSession.kt  MessageQueue.kt  PKCS8.kt  PlatformApiCompat.kt  PortForwarder.kt
dadb/src/test/kotlin/dadb/: AdbConnectionTransportTest.kt  AdbServerDeviceSmokeTest.kt  AdbServerForwardCommandTest.kt  AdbServerForwardReverseTest.kt  AdbServerHostForwardSmokeTest.kt  AdbStreamTest.kt  AdbSyncBehaviorTest.kt  AdbWriterTest.kt  DadbImplTest.kt  DadbInstallBehaviorTest.kt  DadbResultTest.kt  DadbSessionTest.kt  DadbShellBehaviorTest.kt  DadbTest.kt  DadbTestImpl.kt  FakeDadb.kt  PlatformApiCompatTest.kt  TestUtils.kt
docs/: ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  README.md  RELEASING.md
(+59 files in other folders)
